syntax = "proto3";

package uptimeping.scheduler.v1;

//import "google/api/annotations.proto";

option go_package = "gitlab.com/rodionov_v_al/UptimePingPlatform/proto/api/scheduler/v1";

// SchedulerService предоставляет методы для планирования проверок
service SchedulerService {
  // ScheduleCheck планирует выполнение проверки
  rpc ScheduleCheck(ScheduleCheckRequest) returns (Schedule) {}
  
  // UnscheduleCheck отменяет планирование проверки
  rpc UnscheduleCheck(UnscheduleCheckRequest) returns (UnscheduleCheckResponse) {}
  
  // GetSchedule возвращает информацию о расписании проверки
  rpc GetSchedule(GetScheduleRequest) returns (Schedule) {}
  
  // ListSchedules возвращает список расписаний с пагинацией
  rpc ListSchedules(ListSchedulesRequest) returns (ListSchedulesResponse) {}
}

// Schedule представляет расписание проверки
message Schedule {
  string check_id = 1;
  string cron_expression = 2;
  string next_run = 3;
  string last_run = 4;
  bool is_active = 5;
}

// ScheduleCheckRequest содержит данные для планирования проверки
message ScheduleCheckRequest {
  string check_id = 1;
  string cron_expression = 2;
}

// UnscheduleCheckRequest содержит ID проверки для отмены планирования
message UnscheduleCheckRequest {
  string check_id = 1;
}

// UnscheduleCheckResponse подтверждает отмену планирования
message UnscheduleCheckResponse {
  bool success = 1;
}

// GetScheduleRequest содержит ID проверки
message GetScheduleRequest {
  string check_id = 1;
}

// ListSchedulesRequest содержит параметры фильтрации и пагинации
message ListSchedulesRequest {
  int32 page_size = 1;
  int32 page_token = 2;
  string filter = 3;
}

// ListSchedulesResponse содержит список расписаний
message ListSchedulesResponse {
  repeated Schedule schedules = 1;
  int32 next_page_token = 2;
}