package main

import (
	"context"
	"fmt"
	"log"
	"strings"
	"time"

	"github.com/spf13/cobra"

	"UptimePingPlatform/pkg/logger"
	cliClient "UptimePingPlatform/services/cli-service/internal/client"
	cliConfig "UptimePingPlatform/services/cli-service/internal/config"
)

func main() {
	var rootCmd = &cobra.Command{
		Use:   "test-uptimeping",
		Short: "Ğ¢ĞµÑÑ‚Ğ¾Ğ²Ğ°Ñ Ğ²ĞµÑ€ÑĞ¸Ñ uptimeping CLI Ğ±ĞµĞ· Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸",
		Long:  `Ğ¢ĞµÑÑ‚Ğ¾Ğ²Ğ°Ñ CLI ÑƒÑ‚Ğ¸Ğ»Ğ¸Ñ‚Ğ° Ğ´Ğ»Ñ Ğ´ĞµĞ¼Ğ¾Ğ½ÑÑ‚Ñ€Ğ°Ñ†Ğ¸Ğ¸ Ñ„ÑƒĞ½ĞºÑ†Ğ¸Ğ¾Ğ½Ğ°Ğ»Ğ° Ğ±ĞµĞ· Ğ½ĞµĞ¾Ğ±Ñ…Ğ¾Ğ´Ğ¸Ğ¼Ğ¾ÑÑ‚Ğ¸ Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸`,
	}

	// Ğ”Ğ¾Ğ±Ğ°Ğ²Ğ»ÑĞµĞ¼ ĞºĞ¾Ğ¼Ğ°Ğ½Ğ´Ñ‹ config
	configCmd := &cobra.Command{
		Use:   "config",
		Short: "Ğ£Ğ¿Ñ€Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ğµ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸ĞµĞ¹ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº",
	}

	// ĞšĞ¾Ğ¼Ğ°Ğ½Ğ´Ğ° create
	createCmd := &cobra.Command{
		Use:   "create",
		Short: "Ğ¡Ğ¾Ğ·Ğ´Ğ°Ñ‚ÑŒ Ğ½Ğ¾Ğ²ÑƒÑ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºÑƒ",
		RunE:  handleCreate,
	}
	createCmd.Flags().StringP("name", "n", "", "Ğ½Ğ°Ğ·Ğ²Ğ°Ğ½Ğ¸Ğµ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸")
	createCmd.Flags().StringP("type", "t", "http", "Ñ‚Ğ¸Ğ¿ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸")
	createCmd.Flags().StringP("target", "u", "", "Ñ†ĞµĞ»ÑŒ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸")
	createCmd.Flags().IntP("interval", "i", 60, "Ğ¸Ğ½Ñ‚ĞµÑ€Ğ²Ğ°Ğ» Ğ² ÑĞµĞºÑƒĞ½Ğ´Ğ°Ñ…")
	createCmd.Flags().IntP("timeout", "m", 10, "Ñ‚Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚ Ğ² ÑĞµĞºÑƒĞ½Ğ´Ğ°Ñ…")
	createCmd.Flags().StringSliceP("tags", "g", []string{}, "Ñ‚ĞµĞ³Ğ¸")

	// ĞšĞ¾Ğ¼Ğ°Ğ½Ğ´Ğ° list
	listCmd := &cobra.Command{
		Use:   "list",
		Short: "ĞŸĞ¾ĞºĞ°Ğ·Ğ°Ñ‚ÑŒ ÑĞ¿Ğ¸ÑĞ¾Ğº Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº",
		RunE:  handleList,
	}
	listCmd.Flags().StringSliceP("tags", "t", []string{}, "Ñ„Ğ¸Ğ»ÑŒÑ‚Ñ€ Ğ¿Ğ¾ Ñ‚ĞµĞ³Ğ°Ğ¼")
	listCmd.Flags().BoolP("enabled", "e", false, "Ñ„Ğ¸Ğ»ÑŒÑ‚Ñ€ Ğ¿Ğ¾ ÑÑ‚Ğ°Ñ‚ÑƒÑÑƒ")
	listCmd.Flags().IntP("page", "p", 1, "Ğ½Ğ¾Ğ¼ĞµÑ€ ÑÑ‚Ñ€Ğ°Ğ½Ğ¸Ñ†Ñ‹")
	listCmd.Flags().IntP("limit", "l", 20, "Ğ»Ğ¸Ğ¼Ğ¸Ñ‚ Ğ·Ğ°Ğ¿Ğ¸ÑĞµĞ¹")
	listCmd.Flags().StringP("format", "f", "table", "Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ‚ Ğ²Ñ‹Ğ²Ğ¾Ğ´Ğ°")

	// ĞšĞ¾Ğ¼Ğ°Ğ½Ğ´Ğ° get
	getCmd := &cobra.Command{
		Use:   "get [id]",
		Short: "ĞŸĞ¾Ğ»ÑƒÑ‡Ğ¸Ñ‚ÑŒ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºÑƒ Ğ¿Ğ¾ ID",
		Args:  cobra.ExactArgs(1),
		RunE:  handleGet,
	}
	getCmd.Flags().StringP("format", "f", "yaml", "Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ‚ Ğ²Ñ‹Ğ²Ğ¾Ğ´Ğ°")

	// ĞšĞ¾Ğ¼Ğ°Ğ½Ğ´Ğ° run
	runCmd := &cobra.Command{
		Use:   "run [id]",
		Short: "Ğ—Ğ°Ğ¿ÑƒÑÑ‚Ğ¸Ñ‚ÑŒ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºÑƒ",
		Args:  cobra.ExactArgs(1),
		RunE:  handleRun,
	}

	// ĞšĞ¾Ğ¼Ğ°Ğ½Ğ´Ğ° status
	statusCmd := &cobra.Command{
		Use:   "status [id]",
		Short: "ĞŸĞ¾Ğ»ÑƒÑ‡Ğ¸Ñ‚ÑŒ ÑÑ‚Ğ°Ñ‚ÑƒÑ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸",
		Args:  cobra.ExactArgs(1),
		RunE:  handleStatus,
	}

	// ĞšĞ¾Ğ¼Ğ°Ğ½Ğ´Ğ° history
	historyCmd := &cobra.Command{
		Use:   "history [id]",
		Short: "ĞŸĞ¾Ğ»ÑƒÑ‡Ğ¸Ñ‚ÑŒ Ğ¸ÑÑ‚Ğ¾Ñ€Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº",
		Args:  cobra.ExactArgs(1),
		RunE:  handleHistory,
	}
	historyCmd.Flags().IntP("limit", "l", 50, "Ğ»Ğ¸Ğ¼Ğ¸Ñ‚ Ğ·Ğ°Ğ¿Ğ¸ÑĞµĞ¹")
	historyCmd.Flags().IntP("page", "p", 1, "Ğ½Ğ¾Ğ¼ĞµÑ€ ÑÑ‚Ñ€Ğ°Ğ½Ğ¸Ñ†Ñ‹")
	historyCmd.Flags().StringP("format", "f", "table", "Ñ„Ğ¾Ñ€Ğ¼Ğ°Ñ‚ Ğ²Ñ‹Ğ²Ğ¾Ğ´Ğ°")

	// Ğ¡Ğ¾Ğ±Ğ¸Ñ€Ğ°ĞµĞ¼ ĞºĞ¾Ğ¼Ğ°Ğ½Ğ´Ñ‹
	configCmd.AddCommand(createCmd)
	configCmd.AddCommand(listCmd)
	configCmd.AddCommand(getCmd)

	checksCmd := &cobra.Command{
		Use:   "checks",
		Short: "Ğ£Ğ¿Ñ€Ğ°Ğ²Ğ»ĞµĞ½Ğ¸Ğµ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ°Ğ¼Ğ¸",
	}
	checksCmd.AddCommand(runCmd)
	checksCmd.AddCommand(statusCmd)
	checksCmd.AddCommand(historyCmd)

	rootCmd.AddCommand(configCmd)
	rootCmd.AddCommand(checksCmd)

	if err := rootCmd.Execute(); err != nil {
		log.Fatal(err)
	}
}

func createTestClient() (*cliClient.ConfigClient, error) {
	// Ğ¡Ğ¾Ğ·Ğ´Ğ°ĞµĞ¼ Ğ»Ğ¾Ğ³Ğ³ĞµÑ€
	log, err := logger.NewLogger("dev", "info", "test-cli", false)
	if err != nil {
		return nil, fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ»Ğ¾Ğ³Ğ³ĞµÑ€Ğ°: %w", err)
	}

	// Ğ¡Ğ¾Ğ·Ğ´Ğ°ĞµĞ¼ Ñ‚ĞµÑÑ‚Ğ¾Ğ²ÑƒÑ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ñ Ñ ÑƒÑ‡ĞµÑ‚Ğ¾Ğ¼ Ğ¿ĞµÑ€ĞµĞ¼ĞµĞ½Ğ½Ñ‹Ñ… Ğ¾ĞºÑ€ÑƒĞ¶ĞµĞ½Ğ¸Ñ
	config, err := cliConfig.LoadTestConfig()
	if err != nil {
		return nil, fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ·Ğ°Ğ³Ñ€ÑƒĞ·ĞºĞ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Ğ¡Ğ¾Ğ·Ğ´Ğ°ĞµĞ¼ ĞºĞ»Ğ¸ĞµĞ½Ñ‚ Ğ±ĞµĞ· gRPC (Ğ¸ÑĞ¿Ğ¾Ğ»ÑŒĞ·ÑƒĞµĞ¼ HTTP fallback)
	configClient := cliClient.NewConfigClient(config.API.BaseURL, log)

	return configClient, nil
}

func handleCreate(cmd *cobra.Command, args []string) error {
	name, _ := cmd.Flags().GetString("name")
	checkType, _ := cmd.Flags().GetString("type")
	target, _ := cmd.Flags().GetString("target")
	interval, _ := cmd.Flags().GetInt("interval")
	timeout, _ := cmd.Flags().GetInt("timeout")
	tags, _ := cmd.Flags().GetStringSlice("tags")

	client, err := createTestClient()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
	}

	req := &cliClient.CheckCreateRequest{
		Name:     name,
		Type:     checkType,
		Target:   target,
		Interval: interval,
		Timeout:  timeout,
		Tags:     tags,
		Metadata: map[string]string{
			"created_by": "test-cli",
		},
	}

	ctx := context.Background()
	check, err := client.CreateCheck(ctx, req)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %w", err)
	}

	fmt.Printf("âœ… ĞŸÑ€Ğ¾Ğ²ĞµÑ€ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ° ÑƒÑĞ¿ĞµÑˆĞ½Ğ¾!\n")
	fmt.Printf("ğŸ” ID: %s\n", check.ID)
	fmt.Printf("ğŸ“ ĞĞ°Ğ·Ğ²Ğ°Ğ½Ğ¸Ğµ: %s\n", check.Name)
	fmt.Printf("ğŸ”§ Ğ¢Ğ¸Ğ¿: %s\n", check.Type)
	fmt.Printf("ğŸ¯ Ğ¦ĞµĞ»ÑŒ: %s\n", check.Target)
	fmt.Printf("â±ï¸ Ğ˜Ğ½Ñ‚ĞµÑ€Ğ²Ğ°Ğ»: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Interval)
	fmt.Printf("â° Ğ¢Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Timeout)
	fmt.Printf("ğŸ·ï¸ Ğ¢ĞµĞ³Ğ¸: %s\n", fmt.Sprintf("%v", check.Tags))

	return nil
}

func handleList(cmd *cobra.Command, args []string) error {
	tags, _ := cmd.Flags().GetStringSlice("tags")
	enabled, _ := cmd.Flags().GetBool("enabled")
	page, _ := cmd.Flags().GetInt("page")
	limit, _ := cmd.Flags().GetInt("limit")
	format, _ := cmd.Flags().GetString("format")

	client, err := createTestClient()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
	}

	var enabledPtr *bool
	if cmd.Flags().Changed("enabled") {
		enabledPtr = &enabled
	}

	ctx := context.Background()
	response, err := client.ListChecks(ctx, tags, enabledPtr, page, limit)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ ÑĞ¿Ğ¸ÑĞºĞ° Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº: %w", err)
	}

	if len(response.Checks) == 0 {
		fmt.Printf("ğŸ“­ ĞŸÑ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸ Ğ½Ğµ Ğ½Ğ°Ğ¹Ğ´ĞµĞ½Ñ‹\n")
		return nil
	}

	switch format {
	case "json":
		fmt.Println("[")
		for i, check := range response.Checks {
			if i > 0 {
				fmt.Println(",")
			}
			fmt.Printf(`  {"id": "%s", "name": "%s", "type": "%s", "target": "%s", "interval": %d, "timeout": %d, "enabled": %t}`,
				check.ID, check.Name, check.Type, check.Target, check.Interval, check.Timeout, check.Enabled)
		}
		fmt.Println("\n]")
	default:
		fmt.Printf("ğŸ“‹ Ğ¡Ğ¿Ğ¸ÑĞ¾Ğº Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº (ÑÑ‚Ñ€Ğ°Ğ½Ğ¸Ñ†Ğ° %d):\n", page)
		fmt.Printf("%-20s %-25s %-10s %-30s %-10s %-10s %s\n", "ğŸ” ID", "ğŸ“ ĞĞ°Ğ·Ğ²Ğ°Ğ½Ğ¸Ğµ", "ğŸ”§ Ğ¢Ğ¸Ğ¿", "ğŸ¯ Ğ¦ĞµĞ»ÑŒ", "â±ï¸ Ğ˜Ğ½Ñ‚ĞµÑ€Ğ²Ğ°Ğ»", "â° Ğ¢Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚", "ğŸ·ï¸ Ğ¢ĞµĞ³Ğ¸")
		fmt.Println(strings.Repeat("-", 120))

		for _, check := range response.Checks {
			id := check.ID
			if len(id) > 18 {
				id = id[:15] + "..."
			}

			name := check.Name
			if len(name) > 23 {
				name = name[:20] + "..."
			}

			target := check.Target
			if len(target) > 28 {
				target = target[:25] + "..."
			}

			interval := fmt.Sprintf("%ds", check.Interval)
			timeout := fmt.Sprintf("%ds", check.Timeout)

			tagsStr := fmt.Sprintf("%v", check.Tags)
			if tagsStr == "[]" {
				tagsStr = "-"
			}

			fmt.Printf("%-20s %-25s %-10s %-30s %-10s %-10s %s\n", id, name, check.Type, target, interval, timeout, tagsStr)
		}
	}

	fmt.Printf("\nğŸ“Š Ğ’ÑĞµĞ³Ğ¾ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº: %d\n", response.Total)
	fmt.Printf("ğŸ“„ Ğ¡Ñ‚Ñ€Ğ°Ğ½Ğ¸Ñ†Ğ°: %d Ğ¸Ğ· %d\n", page, (response.Total+limit-1)/limit)

	return nil
}

func handleGet(cmd *cobra.Command, args []string) error {
	checkID := args[0]
	format, _ := cmd.Flags().GetString("format")

	client, err := createTestClient()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
	}

	ctx := context.Background()
	check, err := client.GetCheck(ctx, checkID)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %w", err)
	}

	switch format {
	case "json":
		fmt.Printf("{\n")
		fmt.Printf("  \"id\": \"%s\",\n", check.ID)
		fmt.Printf("  \"name\": \"%s\",\n", check.Name)
		fmt.Printf("  \"type\": \"%s\",\n", check.Type)
		fmt.Printf("  \"target\": \"%s\",\n", check.Target)
		fmt.Printf("  \"interval\": %d,\n", check.Interval)
		fmt.Printf("  \"timeout\": %d,\n", check.Timeout)
		fmt.Printf("  \"enabled\": %t,\n", check.Enabled)
		fmt.Printf("  \"tags\": %v,\n", check.Tags)
		fmt.Printf("  \"created_at\": \"%s\",\n", check.CreatedAt.Format(time.RFC3339))
		fmt.Printf("  \"updated_at\": \"%s\"\n", check.UpdatedAt.Format(time.RFC3339))
		fmt.Printf("}\n")
	default:
		fmt.Printf("ğŸ“‹ ĞšĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %s\n", checkID)
		fmt.Printf("ğŸ” ID: %s\n", check.ID)
		fmt.Printf("ğŸ“ ĞĞ°Ğ·Ğ²Ğ°Ğ½Ğ¸Ğµ: %s\n", check.Name)
		fmt.Printf("ğŸ”§ Ğ¢Ğ¸Ğ¿: %s\n", check.Type)
		fmt.Printf("ğŸ¯ Ğ¦ĞµĞ»ÑŒ: %s\n", check.Target)
		fmt.Printf("â±ï¸ Ğ˜Ğ½Ñ‚ĞµÑ€Ğ²Ğ°Ğ»: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Interval)
		fmt.Printf("â° Ğ¢Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Timeout)
		fmt.Printf("ğŸ·ï¸ Ğ¡Ñ‚Ğ°Ñ‚ÑƒÑ: %t\n", check.Enabled)
		fmt.Printf("ğŸ·ï¸ Ğ¢ĞµĞ³Ğ¸: %v\n", check.Tags)
		fmt.Printf("ğŸ“… Ğ¡Ğ¾Ğ·Ğ´Ğ°Ğ½Ğ°: %s\n", check.CreatedAt.Format("2006-01-02 15:04:05"))
		fmt.Printf("ğŸ”„ ĞĞ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ°: %s\n", check.UpdatedAt.Format("2006-01-02 15:04:05"))
	}

	return nil
}

func handleRun(cmd *cobra.Command, args []string) error {
	checkID := args[0]

	client, err := createTestClient()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
	}

	ctx := context.Background()
	response, err := client.RunCheck(ctx, checkID)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ·Ğ°Ğ¿ÑƒÑĞºĞ° Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %w", err)
	}

	fmt.Printf("âœ… ĞŸÑ€Ğ¾Ğ²ĞµÑ€ĞºĞ° Ğ·Ğ°Ğ¿ÑƒÑ‰ĞµĞ½Ğ°!\n")
	fmt.Printf("ğŸ” ID Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %s\n", checkID)
	fmt.Printf("ğŸ†” ID Ğ²Ñ‹Ğ¿Ğ¾Ğ»Ğ½ĞµĞ½Ğ¸Ñ: %s\n", response.ExecutionID)
	fmt.Printf("ğŸ“Š Ğ¡Ñ‚Ğ°Ñ‚ÑƒÑ: %s\n", response.Status)
	fmt.Printf("ğŸ• Ğ’Ñ€ĞµĞ¼Ñ Ğ·Ğ°Ğ¿ÑƒÑĞºĞ°: %s\n", response.StartedAt.Format("2006-01-02 15:04:05"))
	fmt.Printf("ğŸ’¬ Ğ¡Ğ¾Ğ¾Ğ±Ñ‰ĞµĞ½Ğ¸Ğµ: %s\n", response.Message)

	return nil
}

func handleStatus(cmd *cobra.Command, args []string) error {
	checkID := args[0]

	client, err := createTestClient()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
	}

	ctx := context.Background()
	response, err := client.GetCheckStatus(ctx, checkID)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ ÑÑ‚Ğ°Ñ‚ÑƒÑĞ°: %w", err)
	}

	fmt.Printf("ğŸ“Š Ğ¡Ñ‚Ğ°Ñ‚ÑƒÑ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %s\n", checkID)
	fmt.Printf("ğŸ” ID: %s\n", response.CheckID)
	fmt.Printf("ğŸ“ˆ Ğ¢ĞµĞºÑƒÑ‰Ğ¸Ğ¹ ÑÑ‚Ğ°Ñ‚ÑƒÑ: %s\n", response.Status)
	fmt.Printf("ğŸ• ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½Ğ¸Ğ¹ Ğ·Ğ°Ğ¿ÑƒÑĞº: %s\n", response.LastRun.Format("2006-01-02 15:04:05"))
	fmt.Printf("â° Ğ¡Ğ»ĞµĞ´ÑƒÑÑ‰Ğ¸Ğ¹ Ğ·Ğ°Ğ¿ÑƒÑĞº: %s\n", response.NextRun.Format("2006-01-02 15:04:05"))
	fmt.Printf("ğŸ“‹ ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½Ğ¸Ğ¹ ÑÑ‚Ğ°Ñ‚ÑƒÑ: %s\n", response.LastStatus)
	fmt.Printf("ğŸ’¬ ĞŸĞ¾ÑĞ»ĞµĞ´Ğ½ĞµĞµ ÑĞ¾Ğ¾Ğ±Ñ‰ĞµĞ½Ğ¸Ğµ: %s\n", response.LastMessage)
	fmt.Printf("ğŸ”„ Ğ’Ñ‹Ğ¿Ğ¾Ğ»Ğ½ÑĞµÑ‚ÑÑ: %t\n", response.IsRunning)

	return nil
}

func handleHistory(cmd *cobra.Command, args []string) error {
	checkID := args[0]
	limit, _ := cmd.Flags().GetInt("limit")
	page, _ := cmd.Flags().GetInt("page")
	format, _ := cmd.Flags().GetString("format")

	client, err := createTestClient()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
	}

	ctx := context.Background()
	response, err := client.GetCheckHistory(ctx, checkID, page, limit)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ Ğ¸ÑÑ‚Ğ¾Ñ€Ğ¸Ğ¸: %w", err)
	}

	if len(response.Executions) == 0 {
		fmt.Printf("ğŸ“­ Ğ˜ÑÑ‚Ğ¾Ñ€Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº Ğ´Ğ»Ñ %s Ğ¿ÑƒÑÑ‚Ğ°\n", checkID)
		return nil
	}

	switch format {
	case "json":
		fmt.Println("[")
		for i, execution := range response.Executions {
			if i > 0 {
				fmt.Println(",")
			}
			fmt.Printf(`  {"execution_id": "%s", "status": "%s", "message": "%s", "duration": %d, "started_at": "%s", "completed_at": "%s"}`,
				execution.ExecutionID, execution.Status, execution.Message, execution.Duration,
				execution.StartedAt.Format(time.RFC3339), execution.CompletedAt.Format(time.RFC3339))
		}
		fmt.Println("\n]")
	default:
		fmt.Printf("ğŸ“‹ Ğ˜ÑÑ‚Ğ¾Ñ€Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº Ğ´Ğ»Ñ %s (ÑÑ‚Ñ€Ğ°Ğ½Ğ¸Ñ†Ğ° %d):\n", checkID, page)
		fmt.Printf("%-20s %-10s %-15s %s\n", "ğŸ• Ğ’Ñ€ĞµĞ¼Ñ", "ğŸ“Š Ğ¡Ñ‚Ğ°Ñ‚ÑƒÑ", "â±ï¸ Ğ”Ğ»Ğ¸Ñ‚ĞµĞ»ÑŒĞ½Ğ¾ÑÑ‚ÑŒ", "ğŸ’¬ Ğ¡Ğ¾Ğ¾Ğ±Ñ‰ĞµĞ½Ğ¸Ğµ")
		fmt.Println(strings.Repeat("-", 80))

		for _, execution := range response.Executions {
			timestamp := execution.StartedAt.Format("2006-01-02 15:04:05")
			status := execution.Status
			duration := fmt.Sprintf("%dms", execution.Duration)
			message := execution.Message

			if len(message) > 50 {
				message = message[:47] + "..."
			}

			// Ğ”Ğ¾Ğ±Ğ°Ğ²Ğ»ÑĞµĞ¼ ÑĞ¼Ğ¾Ğ´Ğ·Ğ¸ Ğ´Ğ»Ñ ÑÑ‚Ğ°Ñ‚ÑƒÑĞ°
			switch status {
			case "success":
				status = "âœ… " + status
			case "failed":
				status = "âŒ " + status
			case "timeout":
				status = "â° " + status
			default:
				status = "â³ï¸ " + status
			}

			fmt.Printf("%-20s %-15s %-15s %s\n", timestamp, status, duration, message)
		}
	}

	fmt.Printf("\nğŸ“Š Ğ’ÑĞµĞ³Ğ¾ Ğ·Ğ°Ğ¿Ğ¸ÑĞµĞ¹: %d\n", response.Total)
	fmt.Printf("ğŸ“„ Ğ¡Ñ‚Ñ€Ğ°Ğ½Ğ¸Ñ†Ğ°: %d Ğ¸Ğ· %d\n", page, (response.Total+limit-1)/limit)

	return nil
}
