package cmd

import (
	"context"
	"fmt"
	"strings"
	"time"

	"github.com/spf13/cobra"

	"UptimePingPlatform/pkg/errors"
	"UptimePingPlatform/pkg/logger"
	"UptimePingPlatform/pkg/validation"
	"UptimePingPlatform/services/cli-service/internal/auth"
	"UptimePingPlatform/services/cli-service/internal/client"
	cliConfig "UptimePingPlatform/services/cli-service/internal/config"
)

func handleConfigCreate(cmd *cobra.Command, args []string) error {
	name, _ := cmd.Flags().GetString("name")
	checkType, _ := cmd.Flags().GetString("type")
	target, _ := cmd.Flags().GetString("target")
	interval, _ := cmd.Flags().GetInt("interval")
	timeout, _ := cmd.Flags().GetInt("timeout")
	tags, _ := cmd.Flags().GetStringSlice("tags")

	// Load configuration
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ Ğ¿ÑƒÑ‚Ğ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ·Ğ°Ğ³Ñ€ÑƒĞ·ĞºĞ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ¼ĞµĞ½ĞµĞ´Ğ¶ĞµÑ€Ğ° Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸: %w", err)
	}
	defer authManager.Close()

	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Create logger
	log, err := logger.NewLogger("dev", "info", "cli-service", false)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ»Ğ¾Ğ³Ğ³ĞµÑ€Ğ°: %w", err)
	}

	// Validate input
	validator := &validation.Validator{}
	if err := validator.ValidateRequiredFields(map[string]interface{}{
		"name":   name,
		"type":   checkType,
		"target": target,
	}, map[string]string{}); err != nil {
		return errors.Wrap(err, errors.ErrValidation, "Ğ¾Ğ±ÑĞ·Ğ°Ñ‚ĞµĞ»ÑŒĞ½Ñ‹Ğµ Ğ¿Ğ¾Ğ»Ñ: name, type, target")
	}

	// Create config client
	var configClient *client.ConfigClient
	if cfg.GRPC.UseGRPC {
		configClient, err = client.NewConfigClientWithGRPC(
			cfg.API.BaseURL,
			cfg.GRPC.SchedulerAddress,
			cfg.GRPC.CoreAddress,
			log,
		)
		if err != nil {
			return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ gRPC ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
		}
		defer configClient.Close()
	} else {
		configClient = client.NewConfigClient(cfg.API.BaseURL, log)
	}

	// Create check request
	req := &client.CheckCreateRequest{
		Name:     name,
		Type:     checkType,
		Target:   target,
		Interval: interval,
		Timeout:  timeout,
		Tags:     tags,
		Metadata: map[string]string{
			"created_by": "cli",
		},
	}

	// Create check
	check, err := configClient.CreateCheck(ctx, req)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %w", err)
	}

	fmt.Printf("âœ… ĞŸÑ€Ğ¾Ğ²ĞµÑ€ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ° ÑƒÑĞ¿ĞµÑˆĞ½Ğ¾!\n")
	fmt.Printf("ğŸ” ID: %s\n", check.ID)
	fmt.Printf("ğŸ“ ĞĞ°Ğ·Ğ²Ğ°Ğ½Ğ¸Ğµ: %s\n", check.Name)
	fmt.Printf("ğŸ”§ Ğ¢Ğ¸Ğ¿: %s\n", check.Type)
	fmt.Printf("ğŸ¯ Ğ¦ĞµĞ»ÑŒ: %s\n", check.Target)
	fmt.Printf("â±ï¸ Ğ˜Ğ½Ñ‚ĞµÑ€Ğ²Ğ°Ğ»: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Interval)
	fmt.Printf("â° Ğ¢Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Timeout)
	fmt.Printf("ğŸ·ï¸ Ğ¢ĞµĞ³Ğ¸: %s\n", strings.Join(check.Tags, ", "))
	fmt.Printf("ğŸ“… Ğ¡Ğ¾Ğ·Ğ´Ğ°Ğ½Ğ°: %s\n", check.CreatedAt.Format("2006-01-02 15:04:05"))

	return nil
}

func handleConfigGet(cmd *cobra.Command, args []string) error {
	checkID := args[0]
	format, _ := cmd.Flags().GetString("format")

	// Load configuration
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ Ğ¿ÑƒÑ‚Ğ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ·Ğ°Ğ³Ñ€ÑƒĞ·ĞºĞ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ¼ĞµĞ½ĞµĞ´Ğ¶ĞµÑ€Ğ° Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸: %w", err)
	}
	defer authManager.Close()

	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Create logger
	log, err := logger.NewLogger("dev", "info", "cli-service", false)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ»Ğ¾Ğ³Ğ³ĞµÑ€Ğ°: %w", err)
	}

	// Create config client
	var configClient *client.ConfigClient
	if cfg.GRPC.UseGRPC {
		configClient, err = client.NewConfigClientWithGRPC(
			cfg.API.BaseURL,
			cfg.GRPC.SchedulerAddress,
			cfg.GRPC.CoreAddress,
			log,
		)
		if err != nil {
			return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ gRPC ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
		}
		defer configClient.Close()
	} else {
		configClient = client.NewConfigClient(cfg.API.BaseURL, log)
	}

	// Get check
	check, err := configClient.GetCheck(ctx, checkID)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %w", err)
	}

	switch format {
	case "json":
		fmt.Printf("{\n")
		fmt.Printf("  \"id\": \"%s\",\n", check.ID)
		fmt.Printf("  \"name\": \"%s\",\n", check.Name)
		fmt.Printf("  \"type\": \"%s\",\n", check.Type)
		fmt.Printf("  \"target\": \"%s\",\n", check.Target)
		fmt.Printf("  \"interval\": %d,\n", check.Interval)
		fmt.Printf("  \"timeout\": %d,\n", check.Timeout)
		fmt.Printf("  \"enabled\": %t,\n", check.Enabled)
		fmt.Printf("  \"tags\": [%s],\n", strings.Join(check.Tags, ", "))
		fmt.Printf("  \"metadata\": {\n")
		for k, v := range check.Metadata {
			fmt.Printf("    \"%s\": \"%s\",\n", k, v)
		}
		fmt.Printf("  },\n")
		fmt.Printf("  \"created_at\": \"%s\",\n", check.CreatedAt.Format(time.RFC3339))
		fmt.Printf("  \"updated_at\": \"%s\"\n", check.UpdatedAt.Format(time.RFC3339))
		fmt.Printf("}\n")
	default:
		fmt.Printf("ğŸ“‹ ĞšĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %s\n", checkID)
		fmt.Printf("ğŸ” ID: %s\n", check.ID)
		fmt.Printf("ğŸ“ ĞĞ°Ğ·Ğ²Ğ°Ğ½Ğ¸Ğµ: %s\n", check.Name)
		fmt.Printf("ğŸ”§ Ğ¢Ğ¸Ğ¿: %s\n", check.Type)
		fmt.Printf("ğŸ¯ Ğ¦ĞµĞ»ÑŒ: %s\n", check.Target)
		fmt.Printf("â±ï¸ Ğ˜Ğ½Ñ‚ĞµÑ€Ğ²Ğ°Ğ»: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Interval)
		fmt.Printf("â° Ğ¢Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Timeout)
		fmt.Printf("ğŸ·ï¸ Ğ¡Ñ‚Ğ°Ñ‚ÑƒÑ: %t\n", check.Enabled)
		fmt.Printf("ğŸ·ï¸ Ğ¢ĞµĞ³Ğ¸: %s\n", strings.Join(check.Tags, ", "))
		fmt.Printf("ğŸ“… Ğ¡Ğ¾Ğ·Ğ´Ğ°Ğ½Ğ°: %s\n", check.CreatedAt.Format("2006-01-02 15:04:05"))
		fmt.Printf("ğŸ”„ ĞĞ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ°: %s\n", check.UpdatedAt.Format("2006-01-02 15:04:05"))
		fmt.Printf("ğŸ“‹ ĞœĞµÑ‚Ğ°Ğ´Ğ°Ğ½Ğ½Ñ‹Ğµ:\n")
		for k, v := range check.Metadata {
			fmt.Printf("  %s: %s\n", k, v)
		}
	}

	return nil
}

func handleConfigUpdate(cmd *cobra.Command, args []string) error {
	checkID := args[0]
	name, _ := cmd.Flags().GetString("name")
	checkType, _ := cmd.Flags().GetString("type")
	target, _ := cmd.Flags().GetString("target")
	interval, _ := cmd.Flags().GetInt("interval")
	timeout, _ := cmd.Flags().GetInt("timeout")
	enabled, _ := cmd.Flags().GetBool("enabled")
	tags, _ := cmd.Flags().GetStringSlice("tags")

	// Load configuration
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ Ğ¿ÑƒÑ‚Ğ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ·Ğ°Ğ³Ñ€ÑƒĞ·ĞºĞ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ¼ĞµĞ½ĞµĞ´Ğ¶ĞµÑ€Ğ° Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸: %w", err)
	}
	defer authManager.Close()

	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Create logger
	log, err := logger.NewLogger("dev", "info", "cli-service", false)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ»Ğ¾Ğ³Ğ³ĞµÑ€Ğ°: %w", err)
	}

	// Create config client
	var configClient *client.ConfigClient
	if cfg.GRPC.UseGRPC {
		configClient, err = client.NewConfigClientWithGRPC(
			cfg.API.BaseURL,
			cfg.GRPC.SchedulerAddress,
			cfg.GRPC.CoreAddress,
			log,
		)
		if err != nil {
			return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ gRPC ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
		}
		defer configClient.Close()
	} else {
		configClient = client.NewConfigClient(cfg.API.BaseURL, log)
	}

	// Create update request
	req := &client.CheckUpdateRequest{}
	if name != "" {
		req.Name = &name
	}
	if checkType != "" {
		req.Type = &checkType
	}
	if target != "" {
		req.Target = &target
	}
	if interval > 0 {
		req.Interval = &interval
	}
	if timeout > 0 {
		req.Timeout = &timeout
	}
	if cmd.Flags().Changed("enabled") {
		req.Enabled = &enabled
	}
	if len(tags) > 0 {
		req.Tags = tags
	}
	req.Metadata = map[string]string{
		"updated_by": "cli",
	}

	// Update check
	check, err := configClient.UpdateCheck(ctx, checkID, req)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¾Ğ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ¸Ñ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸: %w", err)
	}

	fmt.Printf("âœ… ĞŸÑ€Ğ¾Ğ²ĞµÑ€ĞºĞ° Ğ¾Ğ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ° ÑƒÑĞ¿ĞµÑˆĞ½Ğ¾!\n")
	fmt.Printf("ğŸ” ID: %s\n", check.ID)
	fmt.Printf("ğŸ“ ĞĞ°Ğ·Ğ²Ğ°Ğ½Ğ¸Ğµ: %s\n", check.Name)
	fmt.Printf("ğŸ”§ Ğ¢Ğ¸Ğ¿: %s\n", check.Type)
	fmt.Printf("ğŸ¯ Ğ¦ĞµĞ»ÑŒ: %s\n", check.Target)
	fmt.Printf("â±ï¸ Ğ˜Ğ½Ñ‚ĞµÑ€Ğ²Ğ°Ğ»: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Interval)
	fmt.Printf("â° Ğ¢Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚: %d ÑĞµĞºÑƒĞ½Ğ´\n", check.Timeout)
	fmt.Printf("ğŸ·ï¸ Ğ¡Ñ‚Ğ°Ñ‚ÑƒÑ: %t\n", check.Enabled)
	fmt.Printf("ğŸ·ï¸ Ğ¢ĞµĞ³Ğ¸: %s\n", strings.Join(check.Tags, ", "))
	fmt.Printf("ğŸ”„ ĞĞ±Ğ½Ğ¾Ğ²Ğ»ĞµĞ½Ğ°: %s\n", check.UpdatedAt.Format("2006-01-02 15:04:05"))

	return nil
}

func handleConfigList(cmd *cobra.Command, args []string) error {
	tags, _ := cmd.Flags().GetStringSlice("tags")
	enabled, _ := cmd.Flags().GetBool("enabled")
	page, _ := cmd.Flags().GetInt("page")
	limit, _ := cmd.Flags().GetInt("limit")
	format, _ := cmd.Flags().GetString("format")

	var enabledPtr *bool
	if cmd.Flags().Changed("enabled") {
		enabledPtr = &enabled
	}

	// Load configuration
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ Ğ¿ÑƒÑ‚Ğ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ·Ğ°Ğ³Ñ€ÑƒĞ·ĞºĞ¸ ĞºĞ¾Ğ½Ñ„Ğ¸Ğ³ÑƒÑ€Ğ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ¼ĞµĞ½ĞµĞ´Ğ¶ĞµÑ€Ğ° Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸: %w", err)
	}
	defer authManager.Close()

	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ°ÑƒÑ‚ĞµĞ½Ñ‚Ğ¸Ñ„Ğ¸ĞºĞ°Ñ†Ğ¸Ğ¸: %w", err)
	}

	// Create logger
	log, err := logger.NewLogger("dev", "info", "cli-service", false)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ Ğ»Ğ¾Ğ³Ğ³ĞµÑ€Ğ°: %w", err)
	}

	// Create config client
	var configClient *client.ConfigClient
	if cfg.GRPC.UseGRPC {
		configClient, err = client.NewConfigClientWithGRPC(
			cfg.API.BaseURL,
			cfg.GRPC.SchedulerAddress,
			cfg.GRPC.CoreAddress,
			log,
		)
		if err != nil {
			return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° ÑĞ¾Ğ·Ğ´Ğ°Ğ½Ğ¸Ñ gRPC ĞºĞ»Ğ¸ĞµĞ½Ñ‚Ğ°: %w", err)
		}
		defer configClient.Close()
	} else {
		configClient = client.NewConfigClient(cfg.API.BaseURL, log)
	}

	// Get checks list
	response, err := configClient.ListChecks(ctx, tags, enabledPtr, page, limit)
	if err != nil {
		return fmt.Errorf("Ğ¾ÑˆĞ¸Ğ±ĞºĞ° Ğ¿Ğ¾Ğ»ÑƒÑ‡ĞµĞ½Ğ¸Ñ ÑĞ¿Ğ¸ÑĞºĞ° Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº: %w", err)
	}

	if len(response.Checks) == 0 {
		fmt.Printf("ğŸ“­ ĞŸÑ€Ğ¾Ğ²ĞµÑ€ĞºĞ¸ Ğ½Ğµ Ğ½Ğ°Ğ¹Ğ´ĞµĞ½Ñ‹\n")
		return nil
	}

	switch format {
	case "json":
		fmt.Println("[")
		for i, check := range response.Checks {
			if i > 0 {
				fmt.Println(",")
			}
			fmt.Printf(`  {"id": "%s", "name": "%s", "type": "%s", "target": "%s", "interval": %d, "timeout": %d, "enabled": %t, "tags": [%s], "created_at": "%s"}`,
				check.ID,
				check.Name,
				check.Type,
				check.Target,
				check.Interval,
				check.Timeout,
				check.Enabled,
				strings.Join(check.Tags, ", "),
				check.CreatedAt.Format(time.RFC3339))
		}
		fmt.Println("\n]")
	default:
		fmt.Printf("ğŸ“‹ Ğ¡Ğ¿Ğ¸ÑĞ¾Ğº Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº (ÑÑ‚Ñ€Ğ°Ğ½Ğ¸Ñ†Ğ° %d):\n", page)
		fmt.Printf("%-20s %-25s %-10s %-30s %-10s %-10s %s\n", "ğŸ” ID", "ğŸ“ ĞĞ°Ğ·Ğ²Ğ°Ğ½Ğ¸Ğµ", "ğŸ”§ Ğ¢Ğ¸Ğ¿", "ğŸ¯ Ğ¦ĞµĞ»ÑŒ", "â±ï¸ Ğ˜Ğ½Ñ‚ĞµÑ€Ğ²Ğ°Ğ»", "â° Ğ¢Ğ°Ğ¹Ğ¼Ğ°ÑƒÑ‚", "ğŸ·ï¸ Ğ¢ĞµĞ³Ğ¸")
		fmt.Println(strings.Repeat("-", 120))

		for _, check := range response.Checks {
			id := check.ID
			if len(id) > 18 {
				id = id[:15] + "..."
			}

			name := check.Name
			if len(name) > 23 {
				name = name[:20] + "..."
			}

			target := check.Target
			if len(target) > 28 {
				target = target[:25] + "..."
			}

			interval := fmt.Sprintf("%ds", check.Interval)
			timeout := fmt.Sprintf("%ds", check.Timeout)

			tags := strings.Join(check.Tags, ", ")
			if tags == "" {
				tags = "-"
			}

			fmt.Printf("%-20s %-25s %-10s %-30s %-10s %-10s %s\n", id, name, check.Type, target, interval, timeout, tags)
		}
	}

	fmt.Printf("\nğŸ“Š Ğ’ÑĞµĞ³Ğ¾ Ğ¿Ñ€Ğ¾Ğ²ĞµÑ€Ğ¾Ğº: %d\n", response.Total)
	fmt.Printf("ğŸ“„ Ğ¡Ñ‚Ñ€Ğ°Ğ½Ğ¸Ñ†Ğ°: %d Ğ¸Ğ· %d\n", page, (response.Total+limit-1)/limit)

	return nil
}
